--- a/package.json
+++ b/package.json
@@ -17,8 +17,20 @@
     ]
   },
   "dependencies": {
+    "@types/lodash": "^4.14.194",
+    "@types/redux-persist": "^4.3.1",
+    "axios": "^1.4.0",
+    "lodash": "^4.17.21",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/node": "^18.16.3",
@@ -38,6 +50,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
+    "sass": "^1.62.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
     "vite-tsconfig-paths": "^4.2.0"
